--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,11 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+evm_version = "london"
+solc_version = "0.8.30"
+remappings = [
+    "@openzeppelin/=lib/openzeppelin-contracts/",
+    "@forge-std/=lib/forge-std/src/",
+]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
